--- a/UnrealMatch3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/UnrealMatch3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1213,7 +1213,7 @@ GeneralProjectSettings=True
 AndroidSDKSettings=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [MessageLog]
 LastLogListing=MapCheck
